fix: display on mobile and desktop

--- a/css/small.css
+++ b/css/small.css
@@ -18,6 +18,7 @@ font-family: 'Sanchez', serif;
 background-color: var(--theme-color);
 max-width: 100%;
 overflow-x: hidden;
+height: 100%;
 }
 body { display: grid; grid-template-rows: auto 1fr auto; }
 
